--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<title>Adrienne Hodges | Designer | Front End Developer in Progress</title>
-	</head>
-	<body>
-		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
-		</footer>
-	</body>
+<head>
+
+	<title>Adrienne Hodges | Designer | Front End Developer in Progress</title>
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="normalize.css" />
+	<link rel="stylesheet" href="styles.css" />
+
+</head>
+<body>
+
+	<header>
+		<div class="container">
+			<div class="logo">
+				<img src="images/250x100.png" alt="logo" />
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#">Nav Item 1</a></li>
+					<li><a href="#">Nav Item 2</a></li>
+					<li><a href="#">Nav Item 3</a></li>
+					<li><a href="#">Nav Item 4</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<div id="content" class="container">
+
+		asdf;lkjasd;flkjasdf
+
+
+	</div><!-- / #content -->
+
+	<footer></footer>
+
+
+</body>
 </html>
