--- a/index.html
+++ b/index.html
@@ -14,22 +14,46 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/250x100.png" alt="logo" />
+				<img src="images/logo.jpg" alt="logo" />
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">Nav Item 1</a></li>
-					<li><a href="#">Nav Item 2</a></li>
-					<li><a href="#">Nav Item 3</a></li>
-					<li><a href="#">Nav Item 4</a></li>
+					<li><a href="#">WORK</a></li>
+					<li><a href="#">ABOUT ME</a></li>
+					<li><a href="#">RESUME</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
 
 	<div id="content" class="container">
-
-		asdf;lkjasd;flkjasdf
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
+		<div class="project">
+			<img src="images/project.jpg" alt="logos" />
+		</div>
 
 
 	</div><!-- / #content -->
