new files for portfolio site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" href="styles.css" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </head>
 <body>
@@ -14,7 +16,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/logo.jpg" alt="logo" />
+				<img src="images/adrienne_logo.png" alt="logo" />
 			</div>
 			<nav>
 				<ul>
@@ -27,34 +29,42 @@
 	</header>
 
 	<div id="content" class="container">
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
-		<div class="project">
-			<img src="images/project.jpg" alt="logos" />
-		</div>
+		
+		<div id="row_one" class="row">
+			<div id="web" class="project">
+				<img src="images/web.png" alt="web" />
+			</div>
+			<div id="logos" class="project">
+				<img src="images/logos.png" alt="logos" />
+			</div>
+			<div id="bison" class="project">
+				<img src="images/bison.png" alt="bison" />
+			</div>
+		</div> <!-- / #row_one -->
 
+		<div id="row_two" class="row">
+			<div class="project">
+				<img src="images/project.jpg" alt="logos" />
+			</div>
+			<div class="project">
+				<img src="images/project.jpg" alt="logos" />
+			</div>
+			<div class="project">
+				<img src="images/project.jpg" alt="logos" />
+			</div>
+		</div> <!-- / #row_two -->
+
+		<div id="row_three" class="row">
+			<div class="project">
+				<img src="images/project.jpg" alt="logos" />
+			</div>
+			<div class="project">
+				<img src="images/project.jpg" alt="logos" />
+			</div>
+			<div class="project">
+				<img src="images/project.jpg" alt="logos" />
+			</div>
+		</div> <!-- / #row_three -->
 
 	</div><!-- / #content -->
 
