--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">WORK</a></li>
 					<li><a href="#">ABOUT ME</a></li>
 					<li><a href="#">RESUME</a></li>
 				</ul>
@@ -35,7 +34,7 @@
 				<img src="images/web.png" alt="web" />
 			</div>
 			<div id="logos" class="project">
-				<img src="images/logos.png" alt="logos" />
+				<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
 			</div>
 			<div id="bison" class="project">
 				<img src="images/bison.png" alt="bison" />
