added bison page and change colors

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 				<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
 			</div>
 			<div id="bison" class="project">
-				<img src="images/bison.png" alt="bison" />
+				<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
 			</div>
 		</div> <!-- / #row_one -->
 
 		<div id="row_two" class="row">
-			<div class="project">
-				<img src="images/project.jpg" alt="logos" />
+			<div id="limric" class="project">
+				<img src="images/limric.png" alt="limric" />
 			</div>
-			<div class="project">
-				<img src="images/project.jpg" alt="logos" />
+			<div id="fhc" class="project">
+				<img src="images/fhc.png" alt="febreze home collection" />
 			</div>
-			<div class="project">
-				<img src="images/project.jpg" alt="logos" />
+			<div id="wedding" class="project">
+				<img src="images/wedding.png" alt="our wedding" />
 			</div>
 		</div> <!-- / #row_two -->
 
