adding pages to portfolio site

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
-	<link rel="stylesheet" href="styles.css" />
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
-
+	
 </head>
 <body>
 
@@ -18,20 +18,20 @@
 			<div class="logo">
 				<img src="images/adrienne_logo.png" alt="logo" />
 			</div>
-			<nav>
-				<ul>
-					<li><a href="#">ABOUT ME</a></li>
-					<li><a href="#">RESUME</a></li>
-				</ul>
-			</nav>
 		</div>
 	</header>
 
 	<div id="content" class="container">
-		
-		<div id="row_one" class="row">
+
+		<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
+
+		<div id="blergh" class="project"><a href="blergh.html"> <img src="images/blergh.png" alt="blergh blog"/></a></div>
+
+		<div id="resume" class="project"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf"> <img src="images/resume.png" alt="resume"/></a></div>
+
+		<div class="section group">
 			<div id="web" class="project">
-				<img src="images/web.png" alt="web" />
+				<a href="web.html"><img src="images/web.png" alt="web" /></a>
 			</div>
 			<div id="logos" class="project">
 				<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
@@ -41,7 +41,7 @@
 			</div>
 		</div> <!-- / #row_one -->
 
-		<div id="row_two" class="row">
+		<div class="section group">
 			<div id="limric" class="project">
 				<img src="images/limric.png" alt="limric" />
 			</div>
@@ -53,9 +53,9 @@
 			</div>
 		</div> <!-- / #row_two -->
 
-		<div id="row_three" class="row">
-			<div class="project">
-				<img src="images/project.jpg" alt="logos" />
+		<div class="section group">
+			<div id="green_ion" class="project">
+				<img src="images/green_ion.png" alt="green ion" />
 			</div>
 			<div class="project">
 				<img src="images/project.jpg" alt="logos" />
