--- a/logos.html
+++ b/logos.html
@@ -19,17 +19,16 @@
 			<div class="logo">
 				<img src="images/adrienne_logo.png" alt="logo" />
 			</div>
-			<nav>
-				<ul>
-					<li><a href="index.html">WORK</a></li>
-					<li><a href="#">ABOUT ME</a></li>
-					<li><a href="#">RESUME</a></li>
-				</ul>
-			</nav>
 		</div>
 	</header>
 
 	<div id="content" class="container">
+
+	<div id="home" class="project"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
+
+	<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
+
+	<div id="blergh" class="project"><a href="blergh.html"> <img src="images/blergh.png" alt="blergh blog"/></a></div>
 		
 		<div id="row_one" class="row">
 			<div class="project">
