portfolio site updates

--- a/about.html
+++ b/about.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html>
 <head>
-
-	<title>Adrienne Hodges | Designer | Front End Developer in Progress</title>
+	<meta charset="utf-8">
+	<title>Adrienne Hodges | A little about me</title>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 
 </head>
 <body>
@@ -27,18 +25,16 @@
 
 		<div id="resume" class="project"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf"> <img src="images/resume.png" alt="resume"/></a></div>
 
-		<div id="blergh" class="project"><a href="blergh.html"> <img src="images/blergh.png" alt="blergh blog"/></a></div>
-
 		<div class="bio">
 			
 			<img src="images/adri_pic.jpg" alt="adrienne image"/>
 
-			<h2 class="product-title">A little about me</h2>
+			<h2>A little about me</h2>
 
 			<p>After majoring in Political Science and Spanish at Furman University and painting and making collages as a hobby, I found myself in Madrid teaching English and especially loving the part of my job that required me to create visual teaching aids for my lessons and games with the students. I decided then that I would pursue a career in Graphic Design and make things like that for a living. I would use my talent to help people learn and communicate better.
 			<br>
 			<br>
-			Fast forward to today -- I am a Graphic Designer with four years experience creating and maintaining brand identities across print and digital media. Because design and web development go hand-in-hand, I am excited to be continuing my creative education in Front-End Development at Charleston Code Camp. I have a passion for creating awesome user experiences, both for print and digital, and I love taking the creative and problem-solving skills I use as a designer and applying those to web development.
+			Fast forward to today -- I am a Graphic Designer with four years experience creating and maintaining brand identities across print and digital media. Because design and web development go hand-in-hand, I am excited to be extending my creative abilities to Front-End Development at Charleston Code Camp. I have a passion for creating awesome user experiences, both for print and digital, and I love taking the creative and problem-solving skills I use as a designer and applying those to web development.
 			<br>
 			<br>
 			Take a look around, and get in touch if you have a cool project you want to work on together.
@@ -48,8 +44,10 @@
 
 	</div><!-- / #content -->
 
-	<footer></footer>
+	<footer><p>THIS IS THE FOOTER</p></footer>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
