--- a/index.html
+++ b/index.html
@@ -1,33 +1,32 @@
 <!doctype html>
 <html>
 <head>
-
-	<title>Adrienne Hodges | Designer | Front End Developer in Progress</title>
+	<meta charset="utf-8">
+	<title>Adrienne Hodges | Digital and Print Creative</title>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 	
 </head>
 <body>
-
+<div class="page_wrap">
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/adrienne_logo.png" alt="logo" />
+				<img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
 			</div>
 		</div>
 	</header>
 
 	<div id="content" class="container">
 
-		<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
+		<div class="section group">	
 
-		<div id="blergh" class="project"><a href="blergh.html"> <img src="images/blergh.png" alt="blergh blog"/></a></div>
+			<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
 
-		<div id="resume" class="project"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf"> <img src="images/resume.png" alt="resume"/></a></div>
+			<div id="resume" class="project"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf"> <img src="images/resume.png" alt="resume"/></a></div>
+		</div> <!-- / nav row -->	
 
 		<div class="section group">
 			<div id="web" class="project">
@@ -67,8 +66,11 @@
 
 	</div><!-- / #content -->
 
-	<footer></footer>
+	<footer><p>THIS IS THE FOOTER</p></footer>
+</div> <!-- / div class="page_wrap" -->
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
