--- a/logos.html
+++ b/logos.html
@@ -2,14 +2,12 @@
 
 <html>
 <head>
-
-	<title>Adrienne Hodges | Designer | Front End Developer in Progress</title>
+	<meta charset="utf-8">
+	<title>Adrienne Hodges | Logos</title>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" href="styles.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 
 </head>
 <body>
@@ -27,8 +25,6 @@
 	<div id="home" class="project"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
 
 	<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
-
-	<div id="blergh" class="project"><a href="blergh.html"> <img src="images/blergh.png" alt="blergh blog"/></a></div>
 		
 		<div id="row_one" class="row">
 			<div class="project">
@@ -116,8 +112,10 @@
 
 	</div><!-- / #content -->
 
-	<footer></footer>
+	<footer><p>THIS IS THE FOOTER</p></footer>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
