--- a/web.html
+++ b/web.html
@@ -1,14 +1,12 @@
 <!doctype html>
 <html>
 <head>
-
-	<title>Adrienne Hodges | Designer | Front End Developer in Progress</title>
+	<meta charset="utf-8">
+	<title>Adrienne Hodges | Web</title>
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
 
 </head>
 <body>
@@ -27,8 +25,6 @@
 
 	<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
 
-	<div id="blergh" class="project"><a href="blergh.html"> <img src="images/blergh.png" alt="blergh blog"/></a></div>
-
 	<div class="candle-stuff">
 
 		<div class="wrapper">
@@ -43,28 +39,63 @@
 		<p>This luxury candle is topped with a pearl lid and sealed with a recycled paper band to ensure maximum fragrance integrity.</p>
 
 		<div class="fragrances">
-    		<div class="it_takes_two_to_mango" alt="it_takes_two_to_mango"></div>
-    		<div class="go_ahead_make_my_daisy" alt="go_ahead_make_my_daisy"></div>
-    		<div class="espresso_yourself" alt="espresso_yourself"></div>
-    		<div class="romancing_the_scone" alt="romancing_the_scone"></div>
-    		<div class="you_drive_me_coconuts" alt="you_drive_me_coconuts"></div>
-    		<div class="toucan_play_this_game" alt="toucan_play_this_game"></div>
-    		<div class="oh_say_can_you_sea" alt="oh_say_can_you_sea"></div>
-    		<div class="can_you_pear_me_now" alt="can_you_pear_me_now"></div>
-    		<div class="thyme_and_a_half" alt="thyme_and_a_half"></div>
-    		<div class="did_you_ask_persimmon" alt="did_you_ask_persimmon"></div>
-    		<div class="a_walk_down_plumeria_lane" alt="a_walk_down_plumeria_lane"></div>
-    		<div class="kiss_me_im_iris" alt="kiss_me_im_iris"></div>
-    		<div class="knock_on_wood" alt="knock_on_wood"></div>
-    		<div class="ive_got_a_crush_on_yuzu" alt="ive_got_a_crush_on_yuzu"></div>
+			<p class="fragrance_name">Select a fragrance below.</p>
+    		<div class="it_takes_two_to_mango" alt="It Takes Two to Mango"></div>
+    		<div class="go_ahead_make_my_daisy" alt="Go Ahead, Make My Daisy"></div>
+    		<div class="espresso_yourself" alt="Espresso Yourself"></div>
+    		<div class="romancing_the_scone" alt="Romancing the Scone"></div>
+    		<div class="you_drive_me_coconuts" alt="You Drive Me Coconuts"></div>
+    		<div class="toucan_play_this_game" alt="Toucan Play This Game"></div>
+    		<div class="oh_say_can_you_sea" alt="Oh Say, Can You Sea?"></div>
+    		<div class="can_you_pear_me_now" alt="Can You Pear Me Now?"></div>
+    		<div class="thyme_and_a_half" alt="Thyme and a Half"></div>
+    		<div class="did_you_ask_persimmon" alt="Did You Ask Persimmon?"></div>
+    		<div class="a_walk_down_plumeria_lane" alt="A Walk Down Plumeria Lane"></div>
+    		<div class="kiss_me_im_iris" alt="Kiss Me, I'm Iris"></div>
+    		<div class="knock_on_wood" alt="Knock on Wood"></div>
+    		<div class="ive_got_a_crush_on_yuzu" alt="I've Got a Crush on Yuzu"></div>
   		</div>
 
   	</div><!-- / .candle-stuff div -->
 
+  	<div class="line"></div>
+
+  <div id="container">
+  
+  <div id="tab-container">
+    <!-- / tabs at top -->
+    <ul id="tabs">
+      <li class="tab active">Description<span class="overlay"></span></li>
+      <li class="tab">Dimensions<span class="overlay"></span></li>
+      <li class="tab">Tech Specs<span class="overlay"></span></li>
+      <li class="tab">Reviews<span class="overlay"></span></li>
+    </ul><!-- / #tabs -->
+    
+    <div id="tab-content">
+      <div class="tab_section">
+        This is the most amazing Description tab that you've ever seen. Aren't you so impressed with the descriptive description that this Description tab has in it?
+      </div>
+      <div class="tab_section">
+        This is the most amazing Dimension tab that you've ever seen. Aren't you so impressed with the dimensional dimensions that this Dimension tab has in it?
+      </div>
+      <div class="tab_section">
+        This is the most amazing Tech Specs tab that you've ever seen. Aren't you so impressed with the techy specs that this Tech Specs tab has in it?
+      </div>
+      <div class="tab_section">
+        This is the most amazing Reviews tab that you've ever seen. Aren't you so impressed with the reviewy reviews that this Reviews tab has in it?
+      </div>
+    </div><!-- / #tab-content -->
+    
+ 	</div><!-- / #tab-container -->
+  
+	</div>
+
 	</div><!-- / #content -->
 
-	<footer></footer>
+	<footer><p>THIS IS THE FOOTER</p></footer>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
