portfolio site additions and changes

--- a/about.html
+++ b/about.html
@@ -1,50 +1,55 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
-	<title>Adrienne Hodges | A little about me</title>
+	<title>Adrienne Hodges | About Adrienne</title>
 
-	<!-- Stylesheets -->
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-
 </head>
-<body>
 
+<body>
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/adrienne_logo.png" alt="logo" />
+				<img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
 			</div>
-		</div>
+			
+			<div class="main-nav">	
+				<div id="home" class="nav-item"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
+
+				<div id="resume" class="nav-item"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank"> <img src="images/resume.png" alt="resume"/></a></div>
+			</div> <!-- / nav row -->
+		</div> <!-- / header container -->
 	</header>
 
 	<div id="content" class="container">
-
-		<div id="home" class="project"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
-
-		<div id="resume" class="project"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf"> <img src="images/resume.png" alt="resume"/></a></div>
-
-		<div class="bio">
 			
-			<img src="images/adri_pic.jpg" alt="adrienne image"/>
+			<img id="bio_img" src="images/adri_pic.gif" alt="adrienne image"/>
 
-			<h2>A little about me</h2>
+			<div class="bio">
 
-			<p>After majoring in Political Science and Spanish at Furman University and painting and making collages as a hobby, I found myself in Madrid teaching English and especially loving the part of my job that required me to create visual teaching aids for my lessons and games with the students. I decided then that I would pursue a career in Graphic Design and make things like that for a living. I would use my talent to help people learn and communicate better.
-			<br>
-			<br>
-			Fast forward to today -- I am a Graphic Designer with four years experience creating and maintaining brand identities across print and digital media. Because design and web development go hand-in-hand, I am excited to be extending my creative abilities to Front-End Development at Charleston Code Camp. I have a passion for creating awesome user experiences, both for print and digital, and I love taking the creative and problem-solving skills I use as a designer and applying those to web development.
-			<br>
-			<br>
-			Take a look around, and get in touch if you have a cool project you want to work on together.
-			</p>
+				<h2>About Adrienne</h2>
 
-		</div>
+				<p>
+				After majoring in Political Science and Spanish at Furman University, I found myself in Madrid teaching English and especially loving the part of my job that required me to create visual teaching aids for my lessons and games with the students. I decided then that I would pursue a career in Graphic Design and make things like that for a living; I would use my talent to help people learn and communicate better.
+				<br>
+				<br>
+				Fast forward to today -- I am a Graphic Designer with four years experience creating and maintaining brand identities across print and digital media. Because design and web development go hand-in-hand, I am excited to be extending my creative abilities to Front-End Development by taking classes at Charleston Code Camp. I have a passion for creating awesome user experiences, both for print and digital, and I love taking the creative and problem-solving skills I use as a designer and applying those to web development. It's exciting to take a design and bring it to life on the web.
+				<br>
+				<br>
+				Take a look around, and get in touch if you have a cool project you want to work on together.
+				</p>
+
+			</div> <!-- / bio -->
 
 	</div><!-- / #content -->
 
-	<footer><p>THIS IS THE FOOTER</p></footer>
+	<footer>
+			<p>Copyright 2015: Adrienne Hodges</p>	
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
