--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
 <!doctype html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>Adrienne Hodges | Digital and Print Creative</title>
 
-	<!-- Stylesheets -->
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-	
 </head>
+
 <body>
-<div class="page_wrap">
 	<header>
 		<div class="container">
 			<div class="logo">
 				<img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
 			</div>
-		</div>
+			
+			<div class="main-nav">	
+				<div id="about" class="nav-item"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
+
+				<div id="resume" class="nav-item"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank"> <img src="images/resume.png" alt="resume"/></a></div>
+			</div> <!-- / nav row -->
+		</div> <!-- / header container -->
 	</header>
 
-	<div id="content" class="container">
-
-		<div class="section group">	
-
-			<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
-
-			<div id="resume" class="project"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf"> <img src="images/resume.png" alt="resume"/></a></div>
-		</div> <!-- / nav row -->	
-
-		<div class="section group">
+	<div id="content" class="container">	
+		<div class="row">
 			<div id="web" class="project">
 				<a href="web.html"><img src="images/web.png" alt="web" /></a>
 			</div>
@@ -40,34 +38,34 @@
 			</div>
 		</div> <!-- / #row_one -->
 
-		<div class="section group">
+		<div class="row">
 			<div id="limric" class="project">
-				<img src="images/limric.png" alt="limric" />
+				<a href="limric.html"><img src="images/limric.png" alt="limric" /></a>
 			</div>
 			<div id="fhc" class="project">
-				<img src="images/fhc.png" alt="febreze home collection" />
+				<a href="fhc.html"><img src="images/fhc.png" alt="febreze home collection" /></a>
 			</div>
 			<div id="wedding" class="project">
-				<img src="images/wedding.png" alt="our wedding" />
+				<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
 			</div>
 		</div> <!-- / #row_two -->
 
-		<div class="section group">
+		<div class="row">
 			<div id="green_ion" class="project">
-				<img src="images/green_ion.png" alt="green ion" />
+				<a href="greenion.html"><img src="images/green_ion.png" alt="green ion" /></a>
 			</div>
-			<div class="project">
-				<img src="images/project.jpg" alt="logos" />
+			<div id="codepen" class="project">
+				<a href="http://codepen.io/adriennehodges/" target="_blank"><img src="images/codepen.png" alt="codepen" /></a>
 			</div>
-			<div class="project">
-				<img src="images/project.jpg" alt="logos" />
+			<div id="more" class="project">
+				<img src="images/more.png" alt="more soon" />
 			</div>
 		</div> <!-- / #row_three -->
-
 	</div><!-- / #content -->
 
-	<footer><p>THIS IS THE FOOTER</p></footer>
-</div> <!-- / div class="page_wrap" -->
+	<footer>
+			<p>Copyright 2015: Adrienne Hodges</p>	
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
