--- a/logos.html
+++ b/logos.html
@@ -1,32 +1,32 @@
 <!doctype html>
-
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>Adrienne Hodges | Logos</title>
 
-	<!-- Stylesheets -->
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
-	<link rel="stylesheet" href="styles.css" />
-
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
-<body>
 
+<body>
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/adrienne_logo.png" alt="logo" />
+				<img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
 			</div>
-		</div>
+			
+			<div class="main-nav">	
+				<div id="home" class="nav-item"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
+
+				<div id="about" class="nav-item"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
+			</div> <!-- / nav row -->
+		</div> <!-- / header container -->
 	</header>
 
-	<div id="content" class="container">
-
-	<div id="home" class="project"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
-
-	<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
-		
-		<div id="row_one" class="row">
+	<div id="content" class="container">	
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_cody.png" alt="cody deer imagery logo" />
 			</div>
@@ -38,7 +38,7 @@
 			</div>
 		</div> <!-- / #row_one -->
 
-		<div id="row_two" class="row">
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_loy.png" alt="loy harn logo" />
 			</div>
@@ -50,7 +50,7 @@
 			</div>
 		</div> <!-- / #row_two -->
 
-		<div id="row_three" class="row">
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_cap.png" alt="capital angels logo" />
 			</div>
@@ -62,7 +62,7 @@
 			</div>
 		</div> <!-- / #row_three -->
 
-		<div id="row_four" class="row">
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_goat.png" alt="goat island gatherings logo" />
 			</div>
@@ -74,7 +74,7 @@
 			</div>
 		</div> <!-- / #row_four -->
 
-		<div id="row_five" class="row">
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_suite.png" alt="suite 33 logo" />
 			</div>
@@ -86,7 +86,7 @@
 			</div>
 		</div> <!-- / #row_five -->
 
-		<div id="row_six" class="row">
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_ccc.png" alt="college community coalition logo" />
 			</div>
@@ -98,7 +98,7 @@
 			</div>
 		</div> <!-- / #row_six -->
 
-		<div id="row_seven" class="row">
+		<div class="row">
 			<div class="project">
 				<img src="images/logo_green.png" alt="green door market logo" />
 			</div>
@@ -112,7 +112,9 @@
 
 	</div><!-- / #content -->
 
-	<footer><p>THIS IS THE FOOTER</p></footer>
+	<footer>
+			<p>Copyright 2015: Adrienne Hodges</p>	
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
