--- a/bison.html
+++ b/bison.html
@@ -1,32 +1,35 @@
 <!doctype html>
-
 <html>
+
 <head>
 	<meta charset="utf-8">
-	<title>Adrienne Hodges | Bison Branding</title>
+	<title>Adrienne Hodges | Bison Branding Design Work</title>
 
-	<!-- Stylesheets -->
+	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
-	<link rel="stylesheet" href="styles.css" />
-
+	<link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
-<body>
 
+<body>
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/adrienne_logo.png" alt="logo" />
+				<img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
 			</div>
-		</div>
+			
+			<div class="main-nav">	
+				<div id="home" class="nav-item"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
+
+				<div id="about" class="nav-item"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
+			</div> <!-- / nav row -->
+		</div> <!-- / header container -->
 	</header>
 
 	<div id="content" class="container">
+			
+			<h1>Charleston City Paper Ads for Bison Branding</h1>
 
-	<div id="home" class="project"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
-
-	<div id="about" class="project"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
-		
-			<div id="first" class="ads">
+			<div class="ads">
 				<img src="images/bison_knife.gif" alt="bison city paper ad" />
 			</div>
 			<div class="ads">
@@ -44,13 +47,15 @@
 			<div class="ads">
 				<img src="images/bison_cookie.gif" alt="bison city paper ad" />
 			</div>
-			
+	
 	</div><!-- / #content -->
 
-	<footer><p>THIS IS THE FOOTER</p></footer>
+	<footer>
+			<p>Copyright 2015: Adrienne Hodges</p>	
+	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
-</html>
+</html>			
