fixed wandering video on fhc page, fixed fragrance name on web page

--- a/fhc.html
+++ b/fhc.html
@@ -29,7 +29,7 @@
 			
 			<h1>Febreze Home Collection Product Design and Development</h1>
 
-			<div class=".video-box">
+			<div class="fhc-video-box">
 				<iframe src="https://player.vimeo.com/video/63161842" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			</div>	
 
