--- a/web.html
+++ b/web.html
@@ -36,7 +36,7 @@
 
 		  <h2 class="product-title">15 oz (425g) Scented Candle</h2>
 
-		  <p>This luxury candle is topped with a pearl lid and sealed with a recycled paper band to ensure maximum fragrance integrity.</p>
+		  <p class="product-description">This luxury candle is topped with a pearl lid and sealed with a recycled paper band to ensure maximum fragrance integrity.</p>
 
 		  <div class="fragrances">
 			  <p class="fragrance_name">Select a fragrance below.</p>
