--- a/index.html
+++ b/index.html
@@ -8,57 +8,52 @@
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 
 <body>
 	<header>
 		<div class="container">
 			<div class="logo">
-				<img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
+				<a href="index.html"> <img src="images/adrienne_logo.png" alt="adrienne hodges logo" /></a>
 			</div>
-			
-			<div class="main-nav">	
-				<div id="about" class="nav-item"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
-
-				<div id="resume" class="nav-item"><a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank"> <img src="images/resume.png" alt="resume"/></a></div>
-			</div> <!-- / nav row -->
 		</div> <!-- / header container -->
 	</header>
 
 	<div id="content" class="container">	
 		<div class="row">
+			<div id="resume" class="project">
+				<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">resume</a>
+			</div>
 			<div id="web" class="project">
 				<a href="web.html"><img src="images/web.png" alt="web" /></a>
 			</div>
 			<div id="logos" class="project">
 				<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
 			</div>
-			<div id="bison" class="project">
-				<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
-			</div>
 		</div> <!-- / #row_one -->
 
 		<div class="row">
+			<div id="bison" class="project">
+				<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
+			</div>
 			<div id="limric" class="project">
 				<a href="limric.html"><img src="images/limric.png" alt="limric" /></a>
 			</div>
 			<div id="fhc" class="project">
 				<a href="fhc.html"><img src="images/fhc.png" alt="febreze home collection" /></a>
 			</div>
-			<div id="wedding" class="project">
-				<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
-			</div>
 		</div> <!-- / #row_two -->
 
 		<div class="row">
+			<div id="wedding" class="project">
+				<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
+			</div>
 			<div id="green_ion" class="project">
 				<a href="greenion.html"><img src="images/green_ion.png" alt="green ion" /></a>
 			</div>
 			<div id="codepen" class="project">
 				<a href="http://codepen.io/adriennehodges/" target="_blank"><img src="images/codepen.png" alt="codepen" /></a>
-			</div>
-			<div id="more" class="project">
-				<img src="images/more.png" alt="more soon" />
 			</div>
 		</div> <!-- / #row_three -->
 	</div><!-- / #content -->
