--- a/web.html
+++ b/web.html
@@ -14,14 +14,8 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img src="images/adrienne_logo.png" alt="adrienne hodges logo" />
+        <a href="index.html"> <img src="images/adrienne_logo.png" alt="adrienne hodges logo" /></a>
       </div>
-      
-      <div class="main-nav">  
-        <div id="home" class="nav-item"><a href="index.html"> <img src="images/home.png" alt="home page"/></a></div>
-
-        <div id="about" class="nav-item"><a href="about.html"> <img src="images/about.png" alt="about adrienne"/></a></div>
-      </div> <!-- / nav row -->
     </div> <!-- / header container -->
   </header>
 
