add new categories structure and theme

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
 </head>
 
 <body>
@@ -20,18 +21,57 @@
 		</div> <!-- / header container -->
 	</header>
 
-	<div id="content" class="container">	
+	<div id="content" class="container">
 		<div class="row">
-			<div id="resume" class="project">
-				<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">resume</a>
-			</div>
-			<div id="web" class="project">
-				<a href="web.html"><img src="images/web.png" alt="web" /></a>
-			</div>
-			<div id="logos" class="project">
-				<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
-			</div>
-		</div> <!-- / #row_one -->
+			<div class="category">
+        		<img src="https://unsplash.it/341/239"/>
+        		<div class="cat-info">
+		            <h3 class="cat-title">Resume</h3>
+		            <p class="cat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum lorem eu ullamcorper molestie. Donec sit amet massa accumsan, molestie urna eget, tristique ipsum. Suspendisse potenti.</p>
+		            <div class="learn-more-button">
+		            	<button>
+		            		<span>Open PDF</span>
+		            	</button>
+		            </div>
+        		</div>
+        	</div>
+        	<div class="category">
+        		<img src="https://unsplash.it/341/239"/>
+        		<div class="cat-info">
+		            <h3 class="cat-title">Alex&Ani</h3>
+		            <p class="cat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum lorem eu ullamcorper molestie. Donec sit amet massa accumsan, molestie urna eget, tristique ipsum. Suspendisse potenti.</p>
+		            <div class="learn-more-button">
+		            	<button>
+		            		<span>See More</span>
+		            	</button>
+		            </div>
+        		</div>
+        	</div>
+        	<div class="category">
+        		<img src="https://unsplash.it/341/239"/>
+        		<div class="cat-info">
+		            <h3 class="cat-title">Alex&Ani</h3>
+		            <p class="cat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum lorem eu ullamcorper molestie. Donec sit amet massa accumsan, molestie urna eget, tristique ipsum. Suspendisse potenti.</p>
+		            <div class="learn-more-button">
+		            	<button>
+		            		<span>See More</span>
+		            	</button>
+		            </div>
+        		</div>
+        	</div>
+		</div>
+	</div>
+
+		<div id="resume" class="project">
+			<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">resume</a>
+		</div>
+		<div id="web" class="project">
+			<a href="web.html"><img src="images/web.png" alt="web" /></a>
+		</div>
+		<div id="logos" class="project">
+			<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
+		</div>
+	</div> <!-- / #row_one -->
 
 		<div class="row">
 			<div id="bison" class="project">
