new homepage layout and theming

--- a/index.html
+++ b/index.html
@@ -3,26 +3,34 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Adrienne Hodges | Digital and Print Creative</title>
+	<title>Adrienne Hodges</title>
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
 	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
 
 <body>
+	<!-- page border -->
+	<div id="left"></div>
+	<div id="right"></div>
+	<div id="top"></div>
+	<div id="bottom"></div>
+	<!-- / page border -->
+
 	<header>
 		<div class="container">
-			<div class="logo">
-				<a href="index.html"> <img src="images/adrienne_logo.png" alt="adrienne hodges logo" /></a>
+			<div class="intro">
+				<h1>Hi there, I'm Adrienne, and I'm a Front End Developer and Designer in Charleston, SC.
+				</h1>
+				<!-- <a href="index.html"> <img src="images/adrienne_logo.png" alt="adrienne hodges logo" /></a> -->
 			</div>
-		</div> <!-- / header container -->
+		</div>
 	</header>
 
 	<div id="content" class="container">
-		<div class="row">
+		<!-- <div class="row">
 			<div class="category">
         		<img src="https://unsplash.it/341/239"/>
         		<div class="cat-info">
@@ -58,11 +66,11 @@
 		            	</button>
 		            </div>
         		</div>
-        	</div>
+        	</div> -->
 		</div>
 	</div>
 
-		<div id="resume" class="project">
+		<!-- <div id="resume" class="project">
 			<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">resume</a>
 		</div>
 		<div id="web" class="project">
@@ -70,10 +78,10 @@
 		</div>
 		<div id="logos" class="project">
 			<a href="logos.html"><img src="images/logos.png" alt="logos" /></a>
-		</div>
+		</div> -->
 	</div> <!-- / #row_one -->
 
-		<div class="row">
+		<!-- <div class="row">
 			<div id="bison" class="project">
 				<a href="bison.html"><img src="images/bison.png" alt="bison" /></a>
 			</div>
@@ -82,10 +90,10 @@
 			</div>
 			<div id="fhc" class="project">
 				<a href="fhc.html"><img src="images/fhc.png" alt="febreze home collection" /></a>
-			</div>
+			</div> -->
 		</div> <!-- / #row_two -->
 
-		<div class="row">
+		<!-- <div class="row">
 			<div id="wedding" class="project">
 				<a href="wedding.html"><img src="images/wedding.png" alt="our wedding" /></a>
 			</div>
@@ -94,12 +102,12 @@
 			</div>
 			<div id="codepen" class="project">
 				<a href="http://codepen.io/adriennehodges/" target="_blank"><img src="images/codepen.png" alt="codepen" /></a>
-			</div>
+			</div> -->
 		</div> <!-- / #row_three -->
 	</div><!-- / #content -->
 
 	<footer>
-			<p>Copyright 2015: Adrienne Hodges</p>	
+			<p>Copyright Adrienne Hodges 2017</p>	
 	</footer>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
