update resume file. minor css changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Adrienne Hodges</title>
+	<title>Adrienne | Front End Dev and Designer</title>
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="normalize.css" />
@@ -22,40 +22,19 @@
 	<header>
 		<div class="container">
 			<div class="intro">
-				<h1>Hi there, I'm Adrienne, and I'm a Front End Developer and Designer in Charleston, SC.
-				</h1>
-				<!-- <a href="index.html"> <img src="images/adrienne_logo.png" alt="adrienne hodges logo" /></a> -->
+				<h1>Adrienne Hodges</h1>
+				<h4>Front End Developer and Designer</h4>
 			</div>
 		</div>
 	</header>
 
 	<div id="content" class="container">
-		<!-- <div class="row">
-			<div class="category">
-        		<img src="https://unsplash.it/341/239"/>
-        		<div class="cat-info">
-		            <h3 class="cat-title">Resume</h3>
-		            <p class="cat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum lorem eu ullamcorper molestie. Donec sit amet massa accumsan, molestie urna eget, tristique ipsum. Suspendisse potenti.</p>
-		            <div class="learn-more-button">
-		            	<button>
-		            		<span>Open PDF</span>
-		            	</button>
-		            </div>
-        		</div>
-        	</div>
-        	<div class="category">
-        		<img src="https://unsplash.it/341/239"/>
-        		<div class="cat-info">
-		            <h3 class="cat-title">Alex&Ani</h3>
-		            <p class="cat-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer bibendum lorem eu ullamcorper molestie. Donec sit amet massa accumsan, molestie urna eget, tristique ipsum. Suspendisse potenti.</p>
-		            <div class="learn-more-button">
-		            	<button>
-		            		<span>See More</span>
-		            	</button>
-		            </div>
-        		</div>
-        	</div>
-        	<div class="category">
+		<div class="row">
+        	<button>
+        		<a href="http://adriennehodges.github.io/adriennehodges_resume.pdf" target="_blank">Open PDF of Resume</a>
+        	</button>
+        </div>
+        <!-- 	<div class="category">
         		<img src="https://unsplash.it/341/239"/>
         		<div class="cat-info">
 		            <h3 class="cat-title">Alex&Ani</h3>
@@ -67,7 +46,6 @@
 		            </div>
         		</div>
         	</div> -->
-		</div>
 	</div>
 
 		<!-- <div id="resume" class="project">
