--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
 	<meta charset="utf-8">
 	<title>Adrienne | Front End Dev and Designer</title>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!--[if IE]>
+    	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+
 	<!-- stylesheets -->
-	<link rel="stylesheet" href="normalize.css" />
+	<link href="stylesheets/style.css" type="text/css" rel="stylesheet" >
 	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
 </head>
